update memvber informtion

--- a/site/members.html
+++ b/site/members.html
@@ -105,8 +105,8 @@
           
           <div class="member-card hk">
             <img src="./assets/playerlogo/OwO.png" alt="sunny7890987" class="member-avatar">
-            <h3>sunny7890987(OWO)</h3>
-            <p class="member-role"> </p>
+            <h3>OWO</h3>
+            <p class="member-role"> Anon Chihaya </p>
             <div class="member-skills">
               <span>Web</span>
             </div>
